src/objects/Budget_vs_Actual_Line__c.object
<CustomObject>
    <fields>
        <fullName>Actuals__c</fullName>
        <label>Actual Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Application</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BLANK</fullName>
                </value>
                <value>
                    <fullName>DEZAAN</fullName>
                </value>
                <value>
                    <fullName>HERSHEY</fullName>
                </value>
                <value>
                    <fullName>HUYSMAN</fullName>
                </value>
                <value>
                    <fullName>JOANES</fullName>
                </value>
                <value>
                    <fullName>MACAO</fullName>
                </value>
                <value>
                    <fullName>NEUTRAL</fullName>
                </value>
                <value>
                    <fullName>STARBUCKS</fullName>
                </value>
                <value>
                    <fullName>UNICAO</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>CPKELCO</fullName>
                </value>
                <value>
                    <fullName>DAMIN</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>NICHE</fullName>
                </value>
                <value>
                    <fullName>PLOT</fullName>
                </value>
                <value>
                    <fullName>TRIAL</fullName>
                </value>
                <value>
                    <fullName>ORIGIN/DEZAAN</fullName>
                </value>
                <value>
                    <fullName>ORIGIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_vs_Actuals__c</fullName>
        <label>Budget vs Actuals</label>
        <referenceTo>Budget_vs_Actuals__c</referenceTo>
        <relationshipLabel>Budget vs Actual Lines</relationshipLabel>
        <relationshipName>Budget_vs_Actual_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_Identifier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Certification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certifications_del__c</fullName>
        <label>Certification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4C certified</fullName>
                </value>
                <value>
                    <fullName>AtSource Entry</fullName>
                </value>
                <value>
                    <fullName>AtSource Entry Verified</fullName>
                </value>
                <value>
                    <fullName>AtSource Infinity</fullName>
                </value>
                <value>
                    <fullName>AtSource Plus</fullName>
                </value>
                <value>
                    <fullName>Fair Trade certified</fullName>
                </value>
                <value>
                    <fullName>Organic certified</fullName>
                </value>
                <value>
                    <fullName>Other Responsible Sourcing</fullName>
                </value>
                <value>
                    <fullName>RFA certified</fullName>
                </value>
                <value>
                    <fullName>UTZ certified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Defects__c</fullName>
        <label>Defects</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Defects</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ingredient_commodity__c</fullName>
        <label>Ingredient/commodity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ingredient_commodity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>DRC</fullName>
                </value>
                <value>
                    <fullName>East Timor</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Ethiopia</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>IVC</fullName>
                </value>
                <value>
                    <fullName>Laos</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Nicaragua</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Peru</fullName>
                </value>
                <value>
                    <fullName>PNG</fullName>
                </value>
                <value>
                    <fullName>Tanzania</fullName>
                </value>
                <value>
                    <fullName>Uganda</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Zambia</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pack_Size__c</fullName>
        <label>Pack Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pack_Size</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pack_Type__c</fullName>
        <label>Pack Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pack_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Type__c</fullName>
        <label>Processing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Processing_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Classification__c</fullName>
        <label>Product Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Grade__c</fullName>
        <label>Product Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Grade</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Group_Code__c</fullName>
        <label>Product Group Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Group_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Size</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category_2__c</fullName>
        <label>Product Sub Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Sub_Category_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Product Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Sub_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Consumption__c</fullName>
        <label>Consumption Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trader__c</fullName>
        <label>Trader</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ajay G.</fullName>
                </value>
                <value>
                    <fullName>Alessandro M.</fullName>
                </value>
                <value>
                    <fullName>Andres O.</fullName>
                </value>
                <value>
                    <fullName>Anubhav K.</fullName>
                </value>
                <value>
                    <fullName>Ashim K.</fullName>
                </value>
                <value>
                    <fullName>Bertie S.</fullName>
                </value>
                <value>
                    <fullName>Bruno R.</fullName>
                </value>
                <value>
                    <fullName>Corrado R.</fullName>
                </value>
                <value>
                    <fullName>Daniela R</fullName>
                </value>
                <value>
                    <fullName>Douglas Z.</fullName>
                </value>
                <value>
                    <fullName>Florian S.</fullName>
                </value>
                <value>
                    <fullName>George S.</fullName>
                </value>
                <value>
                    <fullName>Howard B.</fullName>
                </value>
                <value>
                    <fullName>Ian K.</fullName>
                </value>
                <value>
                    <fullName>Jeronimo P.</fullName>
                </value>
                <value>
                    <fullName>Julio V.</fullName>
                </value>
                <value>
                    <fullName>Kohei I.</fullName>
                </value>
                <value>
                    <fullName>Kyle B.</fullName>
                </value>
                <value>
                    <fullName>Luis R.</fullName>
                </value>
                <value>
                    <fullName>Manuel M.</fullName>
                </value>
                <value>
                    <fullName>Marco C.</fullName>
                </value>
                <value>
                    <fullName>Mario P.</fullName>
                </value>
                <value>
                    <fullName>Maxime C.</fullName>
                </value>
                <value>
                    <fullName>Midhun P.</fullName>
                </value>
                <value>
                    <fullName>Mi Jung S.</fullName>
                </value>
                <value>
                    <fullName>Milan B.</fullName>
                </value>
                <value>
                    <fullName>Nikhil C.</fullName>
                </value>
                <value>
                    <fullName>Philip S.</fullName>
                </value>
                <value>
                    <fullName>Pratyush S.</fullName>
                </value>
                <value>
                    <fullName>Ritesh S.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Stream__c</fullName>
        <label>Value Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Value_Stream</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variety__c</fullName>
        <label>Variety</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Variety</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Annual Budget Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Budget vs Actual Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BVSAL-{0000000}</displayFormat>
        <label>Budget vs Actual Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget vs Actual Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>